--- a/demo/host/DemoApp.Blazor.Host/Pages/Index.razor
+++ b/demo/host/DemoApp.Blazor.Host/Pages/Index.razor
@@ -1,4 +1,6 @@
 ﻿@page "/"
+@page "/#"
+@using Abp.AspNetCore.Blazor.Theme.Components
 @using Volo.Abp.Users
 @using Volo.Abp.MultiTenancy
 @using System.Security.Claims
@@ -23,6 +25,10 @@
         <li>PhoneNumberVerified: <strong>@CurrentUser.PhoneNumberVerified</strong></li>
         <li>Roles: <strong>@CurrentUser.Roles.JoinAsString(", ")</strong></li>
     </ul>
+}
+else
+{
+    <RedirectToLogin/>
 }
 
 @if (_claims != null)
