--- a/demo/host/DemoApp.Blazor.Host/_Imports.razor
+++ b/demo/host/DemoApp.Blazor.Host/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Net.Http
+@using Abp.AspNetCore.Blazor.Theme.Bootstrap
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -7,5 +8,5 @@
 @using Microsoft.JSInterop
 @using Volo.Abp.AspNetCore.Components.WebAssembly
 @using DemoApp.Blazor
-@using Blazorise
-@using Blazorise.DataGrid
+@using BootstrapBlazor.Components
+@using Abp.AspNetCore.Blazor.Theme
