--- a/demo/src/DemoApp.Blazor/_Imports.razor
+++ b/demo/src/DemoApp.Blazor/_Imports.razor
@@ -1,5 +1,5 @@
-﻿@using Microsoft.AspNetCore.Components.Web
+﻿@using Abp.AspNetCore.Blazor.Theme.Bootstrap
+@using Microsoft.AspNetCore.Components.Web
 @using Volo.Abp.AspNetCore.Components.Web
-@using Volo.Abp.BlazoriseUI
-@using Blazorise
-@using Blazorise.DataGrid
+@using BootstrapBlazor.Components
+@using Abp.AspNetCore.Blazor.Theme
