--- a/src/Abp.AspNetCore.Blazor.Theme.Bootstrap.WebAssembly/_Imports.razor
+++ b/src/Abp.AspNetCore.Blazor.Theme.Bootstrap.WebAssembly/_Imports.razor
@@ -4,4 +4,5 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
+@using Volo.Abp.AspNetCore.Components.WebAssembly
 @using BootstrapBlazor.Components
