--- a/src/Abp.AspNetCore.Blazor.Theme.Bootstrap/Components/_Imports.razor
+++ b/src/Abp.AspNetCore.Blazor.Theme.Bootstrap/Components/_Imports.razor
@@ -5,4 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using BootstrapBlazor.Components
+@using Abp.AspNetCore.Blazor.Theme.Components
 @namespace Abp.AspNetCore.Blazor.Theme.Bootstrap
