--- a/demo/host/DemoApp.Blazor.Server.Host/Pages/_Host.cshtml
+++ b/demo/host/DemoApp.Blazor.Server.Host/Pages/_Host.cshtml
@@ -1,8 +1,8 @@
 ﻿@page "/"
 @namespace DemoApp.Blazor.Server.Host.Pages
 @using System.Globalization
-@using Volo.Abp.AspNetCore.Components.Server.BasicTheme.Bundling
-@using Volo.Abp.AspNetCore.Components.Web.BasicTheme.Themes.Basic
+@using Abp.AspNetCore.Blazor.Theme.Bootstrap
+@using Abp.AspNetCore.Blazor.Theme.Server
 @using Volo.Abp.Localization
 @{
     Layout = null;
@@ -17,7 +17,7 @@
     <title>DemoApp.Blazor.Server</title>
     <base href="~/" />
 
-    <abp-style-bundle name="@BlazorBasicThemeBundles.Styles.Global" />
+    <abp-style-bundle name="@BlazorBootstrapThemeBundles.Styles.Global" />
 </head>
 <body class="abp-application-layout bg-light @rtl">
     <component type="typeof(App)" render-mode="Server" />
@@ -33,6 +33,6 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <abp-script-bundle name="@BlazorBasicThemeBundles.Scripts.Global" />
+    <abp-script-bundle name="@BlazorBootstrapThemeBundles.Scripts.Global" />
 </body>
 </html>
