--- a/demo/host/DemoApp.IdentityServer/Pages/Index.cshtml
+++ b/demo/host/DemoApp.IdentityServer/Pages/Index.cshtml
@@ -9,6 +9,7 @@
         <abp-row>
             <abp-column size-md="_3" class="text-center">
                 <i class="fa fa-user d-block" style="font-size: 10em; color: #12b900"></i>
+                @* ReSharper disable once Mvc.ControllerNotResolved *@
                 <a abp-button="Primary" asp-controller="Logout" asp-action="Index" asp-area="Account">Logout</a>
             </abp-column>
             <abp-column size-md="_9">
