--- a/src/Tchivs.Abp.AspNetCore.Blazor.Theme.Bootstrap/Components/MainLayout.razor
+++ b/src/Tchivs.Abp.AspNetCore.Blazor.Theme.Bootstrap/Components/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@using Tchivs.Abp.AspNetCore.Blazor.Theme.Components
-@using Tchivs.Abp.AspNetCore.Blazor.Theme.Localization
 @using Microsoft.Extensions.Localization
 @using Microsoft.Extensions.Options
+@using Tchivs.Abp.Shared.Localization
 @using Volo.Abp.UI.Navigation
 @using Volo.Abp.Ui.Branding
 @using Volo.Abp.Users
