--- a/modules/identity/Tchivs.Abp.Identity.Bootstrap.Blazor/_Imports.razor
+++ b/modules/identity/Tchivs.Abp.Identity.Bootstrap.Blazor/_Imports.razor
@@ -1,7 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
 @using BootstrapBlazor.Components
-@using Tchivs.Abp.AspNetCore.Blazor.Theme.Bootstrap
-@using Tchivs.Abp.AspNetCore.Blazor.Theme.Bootstrap.Components
 @using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Forms
 @using Volo.Abp.AspNetCore.Components.Web
+@using global::Tchivs.Abp.AspNetCore.Blazor.Theme.Bootstrap
+@using Tchivs.Abp.AspNetCore.Blazor.Theme.Bootstrap.Components
