fix(claimtypes):修复url冲突

--- a/modules/identity/Tchivs.Abp.Identity.Bootstrap.Blazor/Pages/ClaimTypes/ClaimTypeManagement.razor
+++ b/modules/identity/Tchivs.Abp.Identity.Bootstrap.Blazor/Pages/ClaimTypes/ClaimTypeManagement.razor
@@ -1,4 +1,4 @@
-﻿@page "/identity/users"
+﻿@page "/identity/claim-types"
 @attribute [Authorize(IdentityPermissions.Users.Default)]
 @using Volo.Abp.Identity
 @using Volo.Abp.Identity.Localization
