--- a/src/Tc.Abp.UI.BootstrapBlazor/_Imports.razor
+++ b/src/Tc.Abp.UI.BootstrapBlazor/_Imports.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using BootstrapBlazor.Components
+@using Microsoft.Extensions.Options
 @using global::Tc.Abp.UI
 @using global::Tc.Abp.UI.Components
 @using global::Tc.Abp.UI.Localization
