--- a/src/Tc.Abp.UI.Radzen/Components/MainLayout.razor
+++ b/src/Tc.Abp.UI.Radzen/Components/MainLayout.razor
@@ -1,5 +1,5 @@
-﻿
-@inherits LayoutComponentBase
+﻿@inherits LayoutComponentBase
+@inject NavigationManager UriHelper
 
 <RadzenDialog />
 <RadzenNotification />
@@ -21,7 +21,8 @@
                     <a href="/docs/" title="Radzen Blazor Components Documentation" class="mx-2 mx-lg-3" target="_blank">Documentation</a>
                     <a href="https://www.radzen.com/" title="Create .NET Core web applications fast & easy" class="text-nowrap mx-2 mx-lg-3" target="_blank">About Radzen</a>
                 </div>
-                <RadzenDropDown class="mx-0 mx-lg-3" id="themes" style="width: 220px;" TValue="string" TextProperty="Text" ValueProperty="Value" Data="@ThemeService.Themes" Value="@ThemeService.CurrentTheme" Change="@ChangeTheme" >
+                <RadzenDropDown class="mx-0 mx-lg-3" id="themes" style="width: 220px;" TValue="string" TextProperty="Text" ValueProperty="Value"
+                Data="@ThemeService.Themes" Value="@ThemeService.CurrentTheme" Change="@ChangeTheme" >
                     <ValueTemplate>
                         @context.Text Theme
                     </ValueTemplate>
@@ -65,18 +66,8 @@
                 <div class="row">
                     <div class="col-12 pt-4 pb-5 px-3 px-lg-5">
                         @Body
-                        <RadzenCard class="mt-5 content-footer">
-                            <div class="row align-items-center">
-                                <div class="col-12 col-lg-7 px-5 py-3 text-center text-lg-start">
-                                    <RadzenText TextStyle="TextStyle.H4" class="mb-3">Boost your Blazor development with <br /> Radzen Studio</RadzenText>
-                                    <RadzenText TextStyle="TextStyle.Subtitle1" Class="rz-text-secondary-color">Radzen Studio is a desktop tool that gives you the power to create line of business applications. Build and launch Blazor apps visually, while we generate clean code for you.</RadzenText>
-                                </div>
-                                <div class="col-12 col-lg-5 px-5 text-center text-lg-end">
-                                    <NavLink class="rz-button rz-button-lg rz-light ms-0 my-2 rz-text-align-center" href="https://www.radzen.com/features/" target="_blank">Learn More</NavLink>
-                                    <NavLink class="rz-button rz-button-lg rz-secondary ms-3 my-2 rz-text-align-center" href="https://www.radzen.com/download/" target="_blank">Download Radzen</NavLink>
-                                </div>
-                            </div>
-                        </RadzenCard>
+                      
+
                         <RadzenText TextStyle="TextStyle.Body1" TextAlign="TextAlign.Center" Class="mt-5 mb-3">
                             <RadzenLabel Text="Radzen Blazor Components, &copy; 2018-2022 Radzen."></RadzenLabel>
                             <a href="https://github.com/radzenhq/radzen-blazor" target="_blank">Source Code</a> licensed under
@@ -97,6 +88,13 @@
     </div>
     <div style="flex: 1; overflow: auto">
     <RadzenPanelMenu Match="NavLinkMatch.Prefix" Click="@PanelMenuClick">
+                <RadzenPanelMenuItem Text="General" Icon="home">
+                    <RadzenPanelMenuItem Text="Buttons" Path="buttons" Icon="account_circle"></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Text="Menu" Path="menu" Icon="line_weight"></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Text="FileInput" Path="fileinput" Icon="attach_file"></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Text="Dialog" Path="dialog" Icon="perm_media"></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Text="Notification" Path="notification" Icon="announcement"></RadzenPanelMenuItem>
+                </RadzenPanelMenuItem>
        @* @foreach (var category in examples)
         {
             <NavigationItem @bind-Expanded=@category.Expanded Example=@category>
