--- a/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Blazor.Server.Host/Pages/_Host.cshtml
+++ b/templates/app-nolayers/aspnet-core/MyCompanyName.MyProjectName.Blazor.Server.Host/Pages/_Host.cshtml
@@ -12,7 +12,7 @@
     Layout = null;
     var rtl = CultureHelper.IsRtl ? "rtl" : string.Empty;
     var options = this.HttpContext.RequestServices.GetRequiredService<IOptions<AbpRouterOptions>>().Value;
-    var app = options.AppType;
+    var bundleOptions = this.HttpContext.RequestServices.GetRequiredService<IOptions<BundleOptions>>().Value;
 }
 
 <!DOCTYPE html>
@@ -23,11 +23,11 @@
     <title>MyCompanyName.MyProjectName.Blazor.Server</title>
     <base href="~/" />
 
-    <abp-style-bundle name="@options.BundleStyle" />
+    <abp-style-bundle name="@bundleOptions.Style" />
 </head>
 <body class="abp-application-layout bg-light @rtl">
 
-    <component type="@app" render-mode="Server" />
+    <component type="@options.AppType" render-mode="Server" />
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
@@ -40,6 +40,6 @@
         <a class="dismiss">🗙</a>
     </div>
 
-    <abp-script-bundle name="@options.BundleScript" />
+    <abp-script-bundle name="@bundleOptions.Script" />
 </body>
 </html>
